fix visibility of static plots

--- a/src/vs/workbench/contrib/positronPlots/browser/positronPlots.css
+++ b/src/vs/workbench/contrib/positronPlots/browser/positronPlots.css
@@ -28,7 +28,7 @@
 	padding: 0;
 	margin-left: 5px;
 	margin-right: 5px;
-	margin-top: 10px;
+	margin-top: 5px;
 	opacity: 0.75;
 	transition: opacity 0.2s ease-in-out;
 	cursor: pointer;
@@ -60,4 +60,9 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.static-plot-instance {
+	height: 100%;
+	width: 100%;
 }
